# themegpt-v2.0

./: .codacy.yml  .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  .mcp.json  .pnpmauditrc.yaml  .snyk  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  DIRECTIVES.md  Dockerfile  LICENSE  README.md  SECURITY.md  ThemeGPT-Monetization-Strategy.docx  cloudbuild.yaml  firebase.json  firestore.indexes.json  firestore.rules  package.json  patch.md  pnpm-lock.yaml  pyproject.toml  themegpt-90-day-monetization-roadmap.html  vitest.config.ts
.agents/workflows/: review-and-verify.md
.claude/agents/: bash-expert.md  (+14 more)
.codacy/: codacy.yaml
.github/: dependabot.yml
adws/: .env.example  .gitignore  ARCHITECTURE.md  CONTINUATION_PROMPT.md  DESIGN_NOTES.md  README.md  __init__.py  adw_plan_build.py  get_refresh_token.py  pyproject.toml  setup_cws_auth.py  verify_trinity.py
adws/adw_modules/: __init__.py  agent.py  credentials.py  data_types.py  fault_tolerant.py  metrics_collectors.py  provider_clients.py  providers.py  report_generator.py  state.py  synthesis.py  trinity_protocol.py  worktree_ops.py
adws/n8n-workflows/: adws-issue-generator-workflow.json  adws-multi-llm-synthesis-v2.json
adws/prompts/: themegpt_context.md
adws/scripts/: __init__.py  adw_build_iso.py  adw_document_iso.py  adw_plan_iso.py  adw_review_iso.py  adw_ship_iso.py  adw_test_iso.py  generate_api_design_doc.py  metrics_report.py
adws/tests/: LAYER3_LIVE_RUNBOOK.md  __init__.py  conftest.py  test_api_connectivity.py  test_bridge_allowlist.py  test_bridge_args.py  test_bridge_auth.py  test_bridge_execution.py  test_build_phase.py  test_cws_credentials.py  test_document_phase.py  test_layer1_smoke.py  test_layer2_dryrun.py  test_provider_clients.py  test_review_phase.py  test_script_entrypoints.py  test_ship_phase.py  test_state.py  test_state_hardening.py  test_test_phase.py  test_trinity_protocol.py  test_worktree_cleanup.py  test_worktree_ops.py
adws/tui/: package.json  server.ts
asset/: README.md  create_gif.py  generate_kit.py  generate_wink.py  themegpt-concept-2-organic.html
doc/: README.md  chrome-store-listing.md
docs/: MARKETING.md  ga4-filter-guide.md
patches/: @parcel__reporter-dev-server@2.9.3.patch
prompt/: README.md
scripts/: audit-cws-listing.mjs  audit-popup-integration.mjs  audit-theme-catalog.mjs  capture-mascot-gif.js  deploy-cloud-run.mjs  deploy-cloud-run.sh  generate-extension-theme-thumbs.mjs  generate-workshop-submission-screenshots.ts  optimize-theme-images.mjs  pull_ga4.js  visual-verify.mjs
(+347 files in other folders)
